--- a/content/index.html
+++ b/content/index.html
@@ -1,1 +1,10 @@
-<h1>This is my first site created with Pelican</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Website</title>
+</head>
+<body>
+  <h1>Welcome to My Website</h1>
+  <p>This is the homepage of my website.</p>
+</body>
+</html>
