created my first Article with Pelican and Markdown

--- a/output/archives.html
+++ b/output/archives.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="english">
+<html lang="en">
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,12 +12,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Reee</h1>
 
 <dl>
+    <dt>Fri 16 June 2023</dt>
+    <dd><a href="/my-first-article.html">My First Article</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
