--- a/output/tags.html
+++ b/output/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="english">
+<html lang="en">
 <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,12 +12,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
+                    <li><a href="/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Reee</h1>
     <ul>
+        <li><a href="/tag/birds.html">Birds</a> (1)</li>
+        <li><a href="/tag/bluejay.html">Bluejay</a> (1)</li>
     </ul>
 </section>
 
