--- a/output/authors.html
+++ b/output/authors.html
@@ -13,13 +13,14 @@
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Reee</h1>
     <ul>
-        <li><a href="/author/fa1gore.html">fa1gore</a> (1)</li>
+        <li><a href="/author/fa1gore.html">fa1gore</a> (2)</li>
     </ul>
 </section>
 
