--- a/output/categories.html
+++ b/output/categories.html
@@ -13,6 +13,7 @@
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -20,6 +21,7 @@
     <h1>Categories for Reee</h1>
     <ul>
         <li><a href="/category/blog.html">Blog</a> (1)</li>
+        <li><a href="/category/misc.html">misc</a> (1)</li>
     </ul>
 </section>
 
