--- a/output/my-first-article.html
+++ b/output/my-first-article.html
@@ -14,6 +14,7 @@
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
                     <li class="active"><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
