--- a/output/archives.html
+++ b/output/archives.html
@@ -12,8 +12,9 @@
         <header id="banner" class="body">
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about-me.html">About me</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -21,9 +22,11 @@
 
 <dl>
     <dt>Fri 16 June 2023</dt>
-    <dd><a href="/about-me.html">About me</a></dd>
+    <dd><a href="/articles/my-first-article.html">My First Article</a></dd>
     <dt>Fri 16 June 2023</dt>
-    <dd><a href="/my-first-article.html">My First Article</a></dd>
+    <dd><a href="/articles/my-second-article.html">My Second Article</a></dd>
+    <dt>Fri 16 June 2023</dt>
+    <dd><a href="/articles/my-third-article.html">My Third Article</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
