--- a/output/categories.html
+++ b/output/categories.html
@@ -12,16 +12,16 @@
         <header id="banner" class="body">
                 <h1><a href="/">Reee</a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about-me.html">About me</a></li>
+                    <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
-                    <li><a href="/category/misc.html">misc</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Categories for Reee</h1>
     <ul>
-        <li><a href="/category/blog.html">Blog</a> (1)</li>
-        <li><a href="/category/misc.html">misc</a> (1)</li>
+        <li><a href="/category/blog.html">Blog</a> (3)</li>
     </ul>
 </section>
 
