checking to see if the position matters in markdown, id assume it does, but maybe the title date and summary can be in any order, not sure yet

--- a/output/tags.html
+++ b/output/tags.html
@@ -15,18 +15,23 @@
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Tags for Reee</h1>
     <ul>
+        <li><a href="/tag/baseball.html">Baseball</a> (1)</li>
         <li><a href="/tag/birds.html">Birds</a> (1)</li>
         <li><a href="/tag/bluejay.html">Bluejay</a> (1)</li>
         <li><a href="/tag/css.html">CSS</a> (1)</li>
         <li><a href="/tag/hardware.html">Hardware</a> (1)</li>
         <li><a href="/tag/html.html">HTML</a> (1)</li>
-        <li><a href="/tag/software.html">Software</a> (1)</li>
+        <li><a href="/tag/magic.html">Magic</a> (1)</li>
+        <li><a href="/tag/power.html">Power</a> (1)</li>
+        <li><a href="/tag/software.html">Software</a> (2)</li>
+        <li><a href="/tag/wizardry.html">Wizardry</a> (1)</li>
     </ul>
 </section>
 
