--- a/output/archives.html
+++ b/output/archives.html
@@ -15,14 +15,17 @@
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Reee</h1>
 
 <dl>
+    <dt>Sat 17 June 2023</dt>
+    <dd><a href="/articles/my-thoughts-on-magic.html">My Thoughts On Magic</a></dd>
     <dt>Fri 16 June 2023</dt>
-    <dd><a href="/articles/my-first-article.html">My First Article\</a></dd>
+    <dd><a href="/articles/my-first-article.html">My First Article</a></dd>
     <dt>Fri 16 June 2023</dt>
     <dd><a href="/articles/my-second-article.html">My Second Article</a></dd>
     <dt>Fri 16 June 2023</dt>
