--- a/output/authors.html
+++ b/output/authors.html
@@ -15,13 +15,14 @@
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Reee</h1>
     <ul>
-        <li><a href="/author/fa1gore.html">fa1gore</a> (3)</li>
+        <li><a href="/author/fa1gore.html">fa1gore</a> (4)</li>
     </ul>
 </section>
 
