--- a/output/categories.html
+++ b/output/categories.html
@@ -15,6 +15,7 @@
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -22,6 +23,7 @@
     <h1>Categories for Reee</h1>
     <ul>
         <li><a href="/category/blog.html">Blog</a> (3)</li>
+        <li><a href="/category/language.html">language</a> (1)</li>
     </ul>
 </section>
 
