--- a/output/pages/contact.html
+++ b/output/pages/contact.html
@@ -15,6 +15,7 @@
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li class="active"><a href="/pages/contact.html">Contact</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
+                    <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
