--- a/output/archives.html
+++ b/output/archives.html
@@ -14,6 +14,7 @@
                 <nav><ul>
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/category/beverages.html">Beverages</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                     <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
@@ -22,6 +23,8 @@
 <h1>Archives for Reee</h1>
 
 <dl>
+    <dt>Sat 17 June 2023</dt>
+    <dd><a href="/articles/how-to-make-craft-beer.html">How To Make Craft Beer</a></dd>
     <dt>Sat 17 June 2023</dt>
     <dd><a href="/articles/my-thoughts-on-magic.html">My Thoughts On Magic</a></dd>
     <dt>Fri 16 June 2023</dt>
