--- a/output/authors.html
+++ b/output/authors.html
@@ -14,6 +14,7 @@
                 <nav><ul>
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/category/beverages.html">Beverages</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                     <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
@@ -22,7 +23,7 @@
 <section id="content" class="body">
     <h1>Authors on Reee</h1>
     <ul>
-        <li><a href="/author/fa1gore.html">fa1gore</a> (4)</li>
+        <li><a href="/author/fa1gore.html">fa1gore</a> (5)</li>
     </ul>
 </section>
 
