--- a/output/categories.html
+++ b/output/categories.html
@@ -14,6 +14,7 @@
                 <nav><ul>
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/category/beverages.html">Beverages</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                     <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
@@ -22,6 +23,7 @@
 <section id="content" class="body">
     <h1>Categories for Reee</h1>
     <ul>
+        <li><a href="/category/beverages.html">Beverages</a> (1)</li>
         <li><a href="/category/blog.html">Blog</a> (3)</li>
         <li><a href="/category/language.html">language</a> (1)</li>
     </ul>
