--- a/output/tags.html
+++ b/output/tags.html
@@ -14,6 +14,7 @@
                 <nav><ul>
                     <li><a href="/pages/about-me.html">About me</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/category/beverages.html">Beverages</a></li>
                     <li><a href="/category/blog.html">Blog</a></li>
                     <li><a href="/category/language.html">language</a></li>
                 </ul></nav>
@@ -23,6 +24,7 @@
     <h1>Tags for Reee</h1>
     <ul>
         <li><a href="/tag/baseball.html">Baseball</a> (1)</li>
+        <li><a href="/tag/beer.html">Beer</a> (1)</li>
         <li><a href="/tag/birds.html">Birds</a> (1)</li>
         <li><a href="/tag/bluejay.html">Bluejay</a> (1)</li>
         <li><a href="/tag/css.html">CSS</a> (1)</li>
