Added support for multiple Authors in the Pelicanconf.py file, need to update the view for each Author

--- a/output/index.html
+++ b/output/index.html
@@ -5,7 +5,7 @@
     <title>Reee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="fa1gore">
+    <meta name="author" content="">
 
     <!-- Le styles -->
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css" />
@@ -104,7 +104,7 @@
         <i class="icon-calendar"></i>Sat 17 June 2023
 </abbr>
 <span class="label">By</span>
-<a href="/author/fa1gore.html"><i class="icon-user"></i>fa1gore</a>
+<a href="/author/fa1gore.html"><i class="icon-user"></i>Fa1gore</a>
 <span class="label">Category</span>
 <a href="/category/beverages.html"><i class="icon-folder-open"></i>Beverages</a>.
 
@@ -125,7 +125,7 @@
         <i class="icon-calendar"></i>Sat 17 June 2023
 </abbr>
 <span class="label">By</span>
-<a href="/author/fa1gore.html"><i class="icon-user"></i>fa1gore</a>
+<a href="/author/charles-henderson.html"><i class="icon-user"></i>Charles Henderson</a>
 <span class="label">Category</span>
 <a href="/category/blog.html"><i class="icon-folder-open"></i>Blog</a>.
 
@@ -148,7 +148,7 @@
         <i class="icon-calendar"></i>Fri 16 June 2023
 </abbr>
 <span class="label">By</span>
-<a href="/author/fa1gore.html"><i class="icon-user"></i>fa1gore</a>
+<a href="/author/jimminy-cricket.html"><i class="icon-user"></i>Jimminy Cricket</a>
 <span class="label">Category</span>
 <a href="/category/blog.html"><i class="icon-folder-open"></i>Blog</a>.
 
@@ -170,7 +170,7 @@
         <i class="icon-calendar"></i>Fri 16 June 2023
 </abbr>
 <span class="label">By</span>
-<a href="/author/fa1gore.html"><i class="icon-user"></i>fa1gore</a>
+<a href="/author/charles-henderson.html"><i class="icon-user"></i>Charles Henderson</a>
 <span class="label">Category</span>
 <a href="/category/language.html"><i class="icon-folder-open"></i>language</a>.
 
@@ -193,7 +193,7 @@
         <i class="icon-calendar"></i>Fri 16 June 2023
 </abbr>
 <span class="label">By</span>
-<a href="/author/fa1gore.html"><i class="icon-user"></i>fa1gore</a>
+<a href="/author/charles-henderson.html"><i class="icon-user"></i>Charles Henderson</a>
 <span class="label">Category</span>
 <a href="/category/blog.html"><i class="icon-folder-open"></i>Blog</a>.
 
